--- a/mobileFood/package.json
+++ b/mobileFood/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-checkbox": "^2.0.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
